--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="txt_username">Username</string>
     <string name="txt_username_hint">cheezycode</string>
     <string name="txt_email">Email</string>
-    <string name="txt_email_hint">cheezycode@gmail.com</string>
+    <string name="txt_email_hint">priyamprakash@gmail.com</string>
     <string name="txt_password">Password</string>
     <string name="txt_password_hint">........</string>
     <string name="txt_sign_up">Sign Up</string>
